// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Buttons 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <h2>
    Small Buttons
  </h2>
  <div
    className="story-buttons-container"
  >
    <button
      className="components-button is-small"
      type="button"
    >
      Button
    </button>
    <button
      className="components-button is-primary is-small"
      type="button"
    >
      Primary Button
    </button>
    <button
      className="components-button is-secondary is-small"
      type="button"
    >
      Secondary Button
    </button>
    <button
      className="components-button is-small is-tertiary"
      type="button"
    >
      Tertiary Button
    </button>
    <button
      className="components-button is-small has-icon"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height={24}
        role="img"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 9v1.5h16V9H4zm12 5.5h4V13h-4v1.5zm-6 0h4V13h-4v1.5zm-6 0h4V13H4v1.5z"
        />
      </svg>
    </button>
    <button
      className="components-button is-primary is-small has-icon"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height={24}
        role="img"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 9v1.5h16V9H4zm12 5.5h4V13h-4v1.5zm-6 0h4V13h-4v1.5zm-6 0h4V13H4v1.5z"
        />
      </svg>
    </button>
    <button
      className="components-button is-secondary is-small has-icon"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height={24}
        role="img"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 9v1.5h16V9H4zm12 5.5h4V13h-4v1.5zm-6 0h4V13h-4v1.5zm-6 0h4V13H4v1.5z"
        />
      </svg>
    </button>
    <button
      className="components-button is-small is-tertiary has-icon"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height={24}
        role="img"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 9v1.5h16V9H4zm12 5.5h4V13h-4v1.5zm-6 0h4V13h-4v1.5zm-6 0h4V13H4v1.5z"
        />
      </svg>
    </button>
    <button
      className="components-button is-primary is-small has-text has-icon"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height={24}
        role="img"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 9v1.5h16V9H4zm12 5.5h4V13h-4v1.5zm-6 0h4V13h-4v1.5zm-6 0h4V13H4v1.5z"
        />
      </svg>
      Icon & Text
    </button>
  </div>
  <h2>
    Regular Buttons
  </h2>
  <div
    className="story-buttons-container"
  >
    <button
      className="components-button"
      type="button"
    >
      Button
    </button>
    <button
      className="components-button is-primary"
      type="button"
    >
      Primary Button
    </button>
    <button
      className="components-button is-secondary"
      type="button"
    >
      Secondary Button
    </button>
    <button
      className="components-button is-tertiary"
      type="button"
    >
      Tertiary Button
    </button>
    <button
      className="components-button has-icon"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height={24}
        role="img"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 9v1.5h16V9H4zm12 5.5h4V13h-4v1.5zm-6 0h4V13h-4v1.5zm-6 0h4V13H4v1.5z"
        />
      </svg>
    </button>
    <button
      className="components-button is-primary has-icon"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height={24}
        role="img"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 9v1.5h16V9H4zm12 5.5h4V13h-4v1.5zm-6 0h4V13h-4v1.5zm-6 0h4V13H4v1.5z"
        />
      </svg>
    </button>
    <button
      className="components-button is-secondary has-icon"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height={24}
        role="img"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 9v1.5h16V9H4zm12 5.5h4V13h-4v1.5zm-6 0h4V13h-4v1.5zm-6 0h4V13H4v1.5z"
        />
      </svg>
    </button>
    <button
      className="components-button is-tertiary has-icon"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height={24}
        role="img"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 9v1.5h16V9H4zm12 5.5h4V13h-4v1.5zm-6 0h4V13h-4v1.5zm-6 0h4V13H4v1.5z"
        />
      </svg>
    </button>
    <button
      className="components-button is-primary has-text has-icon"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height={24}
        role="img"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 9v1.5h16V9H4zm12 5.5h4V13h-4v1.5zm-6 0h4V13h-4v1.5zm-6 0h4V13H4v1.5z"
        />
      </svg>
      Icon & Text
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Button Default 1`] = `
<button
  className="components-button"
  type="button"
>
  Default Button
</button>
`;

exports[`Storyshots Components/Button Disabled 1`] = `
<button
  className="components-button"
  disabled={true}
  type="button"
>
  Disabled Button
</button>
`;

exports[`Storyshots Components/Button Disabled Focusable 1`] = `
<button
  aria-disabled={true}
  className="components-button"
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
  type="button"
>
  Disabled Button
</button>
`;

exports[`Storyshots Components/Button Disabled Focusable Icon 1`] = `
<button
  aria-disabled={true}
  aria-label="More"
  className="components-button has-icon"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  type="button"
>
  <svg
    aria-hidden="true"
    className="dashicon dashicons-ellipsis"
    focusable="false"
    height={20}
    role="img"
    viewBox="0 0 20 20"
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 10c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm12-2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-7 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
    />
  </svg>
</button>
`;

exports[`Storyshots Components/Button Disabled Link 1`] = `
<button
  className="components-button"
  disabled={true}
  type="button"
>
  Disabled Link Button
</button>
`;

exports[`Storyshots Components/Button Grouped Icons 1`] = `
<div
  style={
    Object {
      "display": "inline-flex",
    }
  }
>
  <button
    aria-label="Bold"
    className="components-button has-icon"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      focusable="false"
      height={24}
      role="img"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.7 11.3c1-.6 1.5-1.6 1.5-3 0-2.3-1.3-3.4-4-3.4H7v14h5.8c1.4 0 2.5-.3 3.3-1 .8-.7 1.2-1.7 1.2-2.9.1-1.9-.8-3.1-2.6-3.7zm-5.1-4h2.3c.6 0 1.1.1 1.4.4.3.3.5.7.5 1.2s-.2 1-.5 1.2c-.3.3-.8.4-1.4.4H9.6V7.3zm4.6 9c-.4.3-1 .4-1.7.4H9.6v-3.9h2.9c.7 0 1.3.2 1.7.5.4.3.6.8.6 1.5s-.2 1.2-.6 1.5z"
      />
    </svg>
  </button>
  <button
    aria-label="Italic"
    className="components-button has-icon"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      focusable="false"
      height={24}
      role="img"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.5 5L10 19h1.9l2.5-14z"
      />
    </svg>
  </button>
  <button
    aria-label="Link"
    className="components-button has-icon"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      focusable="false"
      height={24}
      role="img"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.6 7.2H14v1.5h1.6c2 0 3.7 1.7 3.7 3.7s-1.7 3.7-3.7 3.7H14v1.5h1.6c2.8 0 5.2-2.3 5.2-5.2 0-2.9-2.3-5.2-5.2-5.2zM4.7 12.4c0-2 1.7-3.7 3.7-3.7H10V7.2H8.4c-2.9 0-5.2 2.3-5.2 5.2 0 2.9 2.3 5.2 5.2 5.2H10v-1.5H8.4c-2 0-3.7-1.7-3.7-3.7zm4.6.9h5.3v-1.5H9.3v1.5z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Button Icon 1`] = `
<button
  aria-label="More"
  className="components-button has-icon"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  type="button"
>
  <svg
    aria-hidden="true"
    className="dashicon dashicons-ellipsis"
    focusable="false"
    height={20}
    role="img"
    viewBox="0 0 20 20"
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 10c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm12-2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-7 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
    />
  </svg>
</button>
`;

exports[`Storyshots Components/Button Link 1`] = `
<a
  className="components-button"
  href="https://wordpress.org/"
  target="_blank"
>
  Link Button
</a>
`;

exports[`Storyshots Components/Button Pressed 1`] = `
<button
  aria-pressed={true}
  className="components-button is-pressed"
  type="button"
>
  Pressed Button
</button>
`;

exports[`Storyshots Components/Button Primary 1`] = `
<button
  className="components-button is-primary"
  type="button"
>
  Primary Button
</button>
`;

exports[`Storyshots Components/Button Secondary 1`] = `
<button
  className="components-button is-secondary"
  type="button"
>
  Secondary Button
</button>
`;

exports[`Storyshots Components/Button Small 1`] = `
<button
  className="components-button is-small"
  type="button"
>
  Small Button
</button>
`;

exports[`Storyshots Components/Button Tertiary 1`] = `
<button
  className="components-button is-tertiary"
  type="button"
>
  Tertiary Button
</button>
`;
